Fix mobile slider text overlap with arrows
- Reduce slider text container width from 320px to 280px on mobile
- Increase margin-right from 50px to 80px for better spacing
- Adjust arrow positioning: left arrow from 57px to 65px, right arrow from 20px to 25px
- Prevent 'Man! I Feel Like A Vegan' text from overlapping with slider arrows
- Improve mobile slider layout for better text readability

--- a/css/hard-feelings-tacos.webflow.css
+++ b/css/hard-feelings-tacos.webflow.css
@@ -2631,12 +2631,12 @@
   }
 
   .slider-paragraph-name-container {
-    width: 350px;
+    width: 300px;
     word-wrap: break-word;
     overflow-wrap: break-word;
     hyphens: auto;
     word-break: normal;
-    margin-right: 60px;
+    margin-right: 70px;
   }
 
   .nav-logo {
@@ -3007,7 +3007,7 @@
     align-items: center;
     width: 30px;
     height: 40px;
-    right: 57px;
+    right: 65px;
   }
 
   .left-arrow-two.arrow-image {
@@ -3017,7 +3017,7 @@
   .right-arrow-two {
     width: 30px;
     height: 40px;
-    right: 20px;
+    right: 25px;
   }
 
   .right-arrow-two.image-arrow-two {
@@ -3037,12 +3037,12 @@
     flex-direction: column;
     top: 20px;
     left: 20px;
-    width: 320px;
+    width: 280px;
     word-wrap: break-word;
     overflow-wrap: break-word;
     hyphens: auto;
     word-break: normal;
-    margin-right: 50px;
+    margin-right: 80px;
   }
 
   .hero-text-inner {
